Align stacks to start (fixes #290)

--- a/css/style.scss
+++ b/css/style.scss
@@ -1076,6 +1076,7 @@ input.input-inline {
 
 	#innerBoard {
 		display: flex;
+		align-items: flex-start;
 	}
 
 	.stack {
